<resources>
    <string name="app_name">P.Rajeev</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="start">start</string>

    <string name="welcome">ನಿಮ್ಮೊoದಿಗೆ</string>
    <string name="wel1">ಬದುಕಿನ ಚಲನೆಯಲ್ಲಿ</string>
    <string name="wel2">ಒಳ್ಳೆಯತನದೊoದಿಗೆ ಒಟ್ಟಾಗಿ ಸಾಗೊಣ.</string>
    <string name="wel3">ಜೊತೆಯಾಗಿದ್ದಕ್ಕೆ ಧನ್ಯವಾದಗಳು.</string>
    <string name="wel4">ಸಲಹೆ, ಪ್ರೋತ್ಸಾಹ ಹಾಗೂ ಮಾರ್ಗದರ್ಶನದ</string>
    <string name="wel5">ನಿರೀಕ್ಷೆಯಲ್ಲಿ...</string>
    <string name="wel6">ಸದಾ ನಿಮ್ಮೊoದಿಗೆ</string>
    <string name="name">ಪಿ. ರಾಜೀವ್</string>
    <string name="tex">ಬದುಕಿನ ಚಲನೆಯಲ್ಲಿ ಒಳ್ಳೆಯತನದೊoದಿಗೆ ಒಟ್ಟಾಗಿ ಸಾಗೊಣ. \nಜೊತೆಯಾಗಿದ್ದಕ್ಕೆ ಧನ್ಯವಾದಗಳು. \n\nಸಲಹೆ, ಪ್ರೋತ್ಸಾಹ ಹಾಗೂ ಮಾರ್ಗದರ್ಶನದ ನಿರೀಕ್ಷೆಯಲ್ಲಿ...</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_status">Check your work status</string>
    <string name="mobile">Mobile</string>
    <string name="epic">EPIC</string>
    <string name="ack">Ack</string>
    <string name="submit">Submit</string>
    <string name="title_contacts">Contacts</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="workers">Party Workers</string>
    <string name="contact_details">Contact Details</string>
    <string name="leaders">Leaders</string>
</resources>
