<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.fragments.WorkStatusFragment">

    <TextView
        android:id="@+id/tv_check_work_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_check_work_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/epic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epic"/>
        <RadioButton
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"/>
        <RadioButton
            android:id="@+id/ack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ack"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tl_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rg_status"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/status_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tl_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/submit"/>
</android.support.constraint.ConstraintLayout>